--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 </div>
 </div>
 <div class="text-wrapper">
-	<span>Оценивайте</span> фото девушек
-и <span>анонимно общайтесь</span>
-прямо <span>в Telegram</span>
+	<span>Хотите заработать?</span> 
+Начните торговлю на платформе прямо сейчас! Минимальный депозит = $10! <br>
+
+👉 Без комиссий <br>
+👉 Без лимитов
 
 
 </div>
@@ -27,7 +29,7 @@
 	<img src="img/heart5.png" alt="" class="heart5">
 	<img src="img/heart4.png" alt="" class="heart4">
 	 <a href="" class="button">
-       Установить сейчас
+       Жмите здесь!
   </a>
 </div>
 <div class="footer">
@@ -38,7 +40,7 @@
 		секунд
 	</div>
 	<div class="footer-button__wrapper">
-		<a href="" class="footer__button">
+		<a href="" class="footer__button active">
 		Открыть чат
 	</a>
 	</div>
