--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 </div>
 <div class="text-wrapper">
-	<span>Хотите заработать?</span> 
+	<span>Хотите заработать?</span> <br>	
 Начните торговлю на платформе прямо сейчас! Минимальный депозит = $10! <br>
 
 👉 Без комиссий <br>
