--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 </div>
 </div>
 <div class="text-wrapper">
-	<span>Хотите заработать?</span> <br>	
+	<span>Хотите заработать?</span>
+<p>	</p>			
 Начните торговлю на платформе прямо сейчас! Минимальный депозит = $10! <br>
 
+<p>	</p>
 👉 Без комиссий <br>
 👉 Без лимитов
 
