--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Знакомства в Telegram</title>
-<link rel="stylesheet" href="css/libs.min.css">
+
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -16,7 +16,8 @@
 </div>
 </div>
 </div>
-<div class="text-wrapper">
+<div class="content">
+	<div class="text-wrapper">
 	<span>Хотите заработать?</span>
 <p>	</p>			
 Начните торговлю на платформе прямо сейчас! Минимальный депозит = $10! <br>
@@ -34,6 +35,8 @@
        Жмите здесь!
   </a>
 </div>
+</div>
+
 <div class="footer">
 	<img src="img/footer-bg.png" alt="" class="footer-bg">
 	<div class="counter">
